feat: Activate and change system of send email * Add .env.example with examples of variables of development. * apps/tasks/view.py it has been modified to redirect to account_login after   registration to correct flow. * settings.py it was modified to use a simple configuratios to decide   email system on base of EMAIL_HOST variable. * templates/account it has been implemented new templates to recover user   password. And add template with contain a style for message that user   recive in their own email whe they want to recover it. * It has has modified templates that was using 'login' instead   'accoun_login'.

--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -9,7 +9,7 @@
             <div class="card-body">
                 <h2 class="card-title">Has cerrado sesión</h2>
                 <p class="card-text">Gracias por usar Mi Agenda Personal.</p>
-                <a href="{% url 'login' %}" class="btn btn-primary mt-3">Volver a Iniciar Sesión</a>
+                <a href="{% url 'account_login' %}" class="btn btn-primary mt-3">Volver a Iniciar Sesión</a>
             </div>
         </div>
     </div>
