--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <p class="card-text fs-5 mt-3">Tu contraseña ha sido cambiada exitosamente.</p>
                 <p class="card-text">Ahora puedes iniciar sesión con tu nueva contraseña.</p>
-                <a href="{% url 'login' %}" class="btn btn-primary mt-4">Iniciar Sesión</a>
+                <a href="{% url 'account_login' %}" class="btn btn-primary mt-4">Iniciar Sesión</a>
             </div>
         </div>
     </div>
