--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -12,7 +12,7 @@
             <div class="card-body">
                 <p class="card-text fs-5 mt-3">Te hemos enviado un correo electrónico con instrucciones sobre cómo restablecer tu contraseña, si existe una cuenta con el email que ingresaste. Deberías recibirlo en breve.</p>
                 <p class="card-text text-muted">Si no recibes un email, por favor asegúrate de haber ingresado la dirección con la que te registraste y revisa tu carpeta de spam (o la consola del servidor si estás en desarrollo).</p>
-                <a href="{% url 'login' %}" class="btn btn-secondary mt-4">Volver a la Página Principal</a> {# O 'login' #}
+                <a href="{% url 'account_login' %}" class="btn btn-secondary mt-4">Volver a la Página Principal</a>
             </div>
         </div>
     </div>
